# panorama_app

./: .gitignore  BUILD_QUICK.md  CHANGELOG.md  HANG_FIXES.md  PERFORMANCE_OPTIMIZATION.md  README  README.md  README_BUILD.md  README_EMOJI_FONTS.md  README_OPENGL.md  README_RSSI.md  README_build.md  build library.txt  build_hackrf_master.sh  build_libhackrf.sh  calibrate_hackrf.py  calibration_example.csv  config.json  dev  hq_cffi.py  hq_sweep.c  hq_sweep.h  install_emoji_fonts.sh  install_emoji_fonts_package.sh  install_emoji_fonts_universal.sh  pyproject.toml  requirements.txt  run.sh  run_linux.sh  run_macos.sh  run_panorama.sh  run_rssi_panorama.py  sweep_analyzer.py  test_cffi.py  test_import.py  test_unified_backend.py
configs/: app.default.json
configs/schema/: app.schema.json
docs/: HACKRF_CALIBRATION.md  hackrf_calibration_example.json
panorama/: CHANGES_SUMMARY.md  FIXES_README.md  PEAK_FIX_SUMMARY.md  WATCHLIST_FIX_SUMMARY.md  WATCHLIST_QUICKSTART.md  WATCHLIST_README.md  app.py  build_and_test.sh  main.py  main_rssi.py  run_panorama.py  setup.py  test_peak_detection.py  test_peak_fix.py  test_peak_simple.py  test_watchlist.py  test_watchlist_simple.py  test_watchlist_syntax.py
panorama/cli/: calibrate_hackrf.py
panorama/core/: components_manager.py  config_manager.py  error_handler.py  status_manager.py
panorama/drivers/: __init__.py  base.py  hackrf_sweep.py  hrf_backend.py
panorama/drivers/hackrf/: __init__.py  hrf_backend.py
panorama/drivers/hackrf_lib/: Makefile  __init__.py  backend.py  building.txt  compile_libhackrf.sh  (+21 more)
panorama/shared/: __init__.py  calibration.py  config.py  exporters.py  logging.py  palettes.py  parsing.py  rms_error_handler.py  rms_integration.py  rms_logger.py  rms_utils.py
panorama/ui/: __init__.py  main_ui_manager.py  window.py
scripts/: autodettach_win.bat  start streaming usb.bat  stop streaming usb.bat
src/panorama/: __init__.py  __main__.py  app.py
tests/: test_hackrf_master.py  test_map2d.py  test_parsing.py  test_peaks.py  test_sweep_assembler.py  test_trilateration_engine.py
(+104 files in other folders)
