[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panorama"
version = "0.1"
description = "PANORAMA spectrum analyzer"
authors = [{name = "PANORAMA"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
panorama = "panorama.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
